scrollbar fix

--- a/assets/pages/hand/the_hand.css
+++ b/assets/pages/hand/the_hand.css
@@ -352,3 +352,20 @@ html[dir="rtl"]{
     flex: auto;
     text-align: center;
 }
+
+.plyr__poster{
+    background-position: cover !important;
+}
+
+body::-webkit-scrollbar {
+    width: 0.5em;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: var(--c-text);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: var(--c-waken-l);
+    border-radius: 6px;
+}
